        [project]
        name = "datascience_toolkit"
        version = "0.1.0"
        description = "All of my datascience tools in one place"
        requires-python = ">=3.10"
        dependencies = [
            "pandas",
            "scikit-learn",
            "seaborn",
            "numpy",
        ]

        [build-system]
        requires = ["setuptools>=61.0"]
        build-backend = "setuptools.build_meta"